k8s-resources/service-discovery.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-discovery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-discovery
  template:
    metadata:
      labels:
        app: service-discovery
    spec:
      containers:
        - name: service-discovery
          image: service-discovery:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: service-discovery
spec:
  selector:
    app: service-discovery
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
  type: LoadBalancer
