k8s-resources/api-gw.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: api-gateway:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: localhost  # Replace with your actual host
      http:
        paths:
          - path: /auth/.*
            pathType: Prefix
            backend:
              service:
                name: keycloak  # Replace with your Keycloak service name
                port:
                  number: 8005  # Replace with the actual port of your Keycloak service
          - path: /auth.*
            pathType: Prefix
            backend:
              service:
                name: keycloak  # Replace with your Keycloak service name
                port:
                  number: 8005  # Replace with the actual port of your Keycloak service
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8000
